--- a/frontend/templates/view_elasticsearch.html
+++ b/frontend/templates/view_elasticsearch.html
@@ -14,18 +14,64 @@
     <thead>
         <tr>
             <th>ID</th>
-            <th>Имя файла</th>
-            <th>Содержимое</th>
-            <th>Время загрузки</th>
+            <th>Дата создания</th>
+            <th>Дата обновления</th>
+            <th>Имя</th>
+            <th>CI Code</th>
+            <th>Краткое имя</th>
+            <th>Полное имя</th>
+            <th>Описание</th>
+            <th>Примечания</th>
+            <th>Статус</th>
+            <th>Производитель</th>
+            <th>Серийный номер</th>
+            <th>Модель</th>
+            <th>Локация</th>
+            <th>Монтаж</th>
+            <th>Hostname</th>
+            <th>DNS</th>
+            <th>IP</th>
+            <th>CPU Cores</th>
+            <th>CPU Freq</th>
+            <th>RAM</th>
+            <th>Total Volume</th>
+            <th>Тип</th>
+            <th>Категория</th>
+            <th>Организация пользователя</th>
+            <th>Организация владельца</th>
+            <th>Код мониторинга</th>
         </tr>
     </thead>
     <tbody>
         {% for record in records %}
         <tr>
             <td>{{ record.id }}</td>
-            <td>{{ record.filename }}</td>
-            <td>{{ record.content }}</td>
-            <td>{{ record.timestamp }}</td>
+            <td>{{ record.created_on }}</td>
+            <td>{{ record.updated_on }}</td>
+            <td>{{ record.name }}</td>
+            <td>{{ record.ci_code }}</td>
+            <td>{{ record.short_name }}</td>
+            <td>{{ record.full_name }}</td>
+            <td>{{ record.description }}</td>
+            <td>{{ record.notes }}</td>
+            <td>{{ record.status }}</td>
+            <td>{{ record.manufacturer }}</td>
+            <td>{{ record.serial }}</td>
+            <td>{{ record.model }}</td>
+            <td>{{ record.location }}</td>
+            <td>{{ record.mount }}</td>
+            <td>{{ record.hostname }}</td>
+            <td>{{ record.dns }}</td>
+            <td>{{ record.ip }}</td>
+            <td>{{ record.cpu_cores }}</td>
+            <td>{{ record.cpu_freq }}</td>
+            <td>{{ record.ram }}</td>
+            <td>{{ record.total_volume }}</td>
+            <td>{{ record.type }}</td>
+            <td>{{ record.category }}</td>
+            <td>{{ record.user_org }}</td>
+            <td>{{ record.owner_org }}</td>
+            <td>{{ record.code_mon }}</td>
         </tr>
         {% endfor %}
     </tbody>
