--- a/frontend/templates/view_elasticsearch.html
+++ b/frontend/templates/view_elasticsearch.html
@@ -3,7 +3,7 @@
 {% block title %}Данные из Elasticsearch{% endblock %}
 
 {% block content %}
-<h2>Все записи из Elasticsearch</h2>
+<h2>Все загруженные записи из Elasticsearch</h2>
 
 <!-- Форма для полнотекстового поиска -->
 <div class="search-container">
