--- a/frontend/templates/view_elasticsearch_delete.html
+++ b/frontend/templates/view_elasticsearch_delete.html
@@ -3,7 +3,7 @@
 {% block title %}Данные из Delete Elasticsearch{% endblock %}
 
 {% block content %}
-<h2>Все записи из Delete Elasticsearch</h2>
+<h2>Все удаленные записи из Delete Elasticsearch</h2>
 
 <!-- Форма для полнотекстового поиска -->
 <div class="search-container">
