--- a/frontend/templates/view_elasticsearch_result.html
+++ b/frontend/templates/view_elasticsearch_result.html
@@ -3,7 +3,7 @@
 {% block title %}Данные из Result Elasticsearch{% endblock %}
 
 {% block content %}
-<h2>Все записи из Result Elasticsearch</h2>
+<h2>Все обработанные записи из Result Elasticsearch</h2>
 
 <!-- Форма для полнотекстового поиска -->
 <div class="search-container">
